Bug fixes mostly. * Reworked z-indexes to be a bit more organized and follow-able. * Fixed bug where menu items would jump massively after leaving the pause menu. * Fixed bug where coins and projectiles were appearing on top of the character when they should have been behind the player. * Moved some logic out of the main game loop and into their own methods * Added Comments to game item spawn and move methods

--- a/public/stylesheets/game.scss
+++ b/public/stylesheets/game.scss
@@ -37,13 +37,18 @@ main{
     height: 100%;
     min-height: 512px;
     min-width: 512px;
-    z-index: 1;
+    z-index: 10;
+  }
+  .game-projectile{
+    z-index: 121;
+  }
+  .game-coin{
+    z-index: 120;
   }
   .game-coin, .game-projectile{
     position: absolute;
     width: 64px;
     height: 64px;
-    z-index: 400;
   }
 }
 #game-movement-tap-region{
@@ -52,7 +57,7 @@ main{
   left: 0;
   width: 100%;
   height: 300px;
-  z-index: 450;
+  z-index: 200;
 }
 #game-score-wrapper, #game-pause-menu-button{
   top: -60px;
@@ -68,7 +73,7 @@ main{
   height: 55px;
   width: 100px;
   border-radius: 0;
-  z-index: 50;
+  z-index: 210;
   &:not(a){
     color: #fff;
     background-color: $game-panel-bg;
@@ -96,7 +101,7 @@ main{
   left: 32px;
   width: 128px;
   height: 128px;
-  z-index: 25;
+  z-index: 125;
 }
 #game-main-menu, #game-pause-menu, #game-over-menu{
   display: flex;
@@ -110,7 +115,7 @@ main{
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 500;
+  z-index: 300;
   background-color: rgb(0,0,0);
   background-color: rgba(0, 0, 0,0.5);
   &>div{
