--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,14 +6,14 @@ footer{
   color: #9d9d9d;
   background-color: #222;
   padding: 1em 0;
-  z-index: 100;
+  z-index: 220;
 }
 footer p{
   margin: 0;
 }
 
 header{
-  z-index: 250;
+  z-index: 220;
 }
 
 //Fix margin on .panel and .alert headers
